# ObservableProperties

./: .gitignore  BATCHED_UPDATES.md  CHANGE_COALESCING.md  Cargo.toml  IMPROVEMENTS.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml
examples/: async_stream.rs  basic.rs  bidirectional_binding.rs  computed.rs  custom_equality.rs  debug_logging.rs  event_sourcing.rs  history.rs  logging.rs  macros_demo.rs  map_transform.rs  metrics.rs  multithreaded.rs  update_batch.rs  validated.rs  weak_observer.rs
macros/: Cargo.toml
macros/src/: lib.rs
observable-property-macros/: Cargo.toml
observable-property-macros/src/: lib.rs
observable-property-macros/tests/: comprehensive.rs
observable-property-macros/tests/integration/: derive_observable_basic.rs  derive_observable_complex.rs  derive_observable_macro.rs  direct_types.rs  observable_macro_basic.rs
observable-property-macros/tests/ui/: enum_not_supported.rs  enum_not_supported.stderr  invalid_field_type.rs  invalid_field_type.stderr
observable_macros/: Cargo.toml
observable_macros/src/: lib.rs
observable_macros/tests/: subscriptions.rs
src/: CHANGELOG.md  computed.rs  constants.rs  core.rs  error.rs  events.rs  lib.rs  metrics.rs  observer.rs  persistence.rs  subscription.rs  testing.rs
tests/: macros.rs
