[package]
name = "observable-property"
version = "0.4.2"
edition = "2021"
authors = ["Iede Snoek <info@esoxsolutions.nl>"]
license = "MIT OR Apache-2.0"
description = "A thread-safe observable property implementation for Rust"
repository = "https://github.com/snoekiede/ObservableProperties"
homepage = "https://github.com/snoekiede/ObservableProperties"
documentation = "https://docs.rs/observable-property"
readme = "README.md"
keywords = ["observable", "property", "thread-safe", "concurrency", "observer"]
categories = ["concurrency", "data-structures", "development-tools"]
exclude = [
    "target/*",
    "Cargo.lock",
    ".git/*",
    ".github/*",
]

[lib]
name = "observable_property"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]
debug = ["dep:backtrace"]
async = []

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
backtrace = { version = "0.3", optional = true }

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "time"] }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "multithreaded"
path = "examples/multithreaded.rs"

[[example]]
name = "async_stream"
path = "examples/async_stream.rs"
required-features = ["async"]
