[package]
name = "observable-property-macros"
version = "0.2.2"
edition = "2024"
authors = ["Iede Snoek <info@esoxsolutions.nl>"]
license = "MIT OR Apache-2.0"
description = "Procedural macros for observable-property crate"
repository = "https://github.com/snoekiede/ObservableProperties"
homepage = "https://github.com/snoekiede/ObservableProperties"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
