[package]
name = "observable-property-macros"
version = "0.2.2"
edition = "2021"
authors = ["Iede Snoek <info@esoxsolutions.nl>"]
license = "MIT OR Apache-2.0"
description = "Procedural macros for the observable-property crate"
repository = "https://github.com/snoekiede/ObservableProperties"
documentation = "https://docs.rs/observable-property-macros"
keywords = ["observable", "property", "macros", "procedural", "derive"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
# For testing macro expansion
trybuild = "1.0"
observable-property = { path = "..", version = "0.2.1" }
